[gd_scene load_steps=2 format=3 uid="uid://4une5c5cx8wt"]

[ext_resource type="Script" path="res://Lp4-1.gd" id="1_couk8"]

[node name="Lp4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_couk8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 54.0
offset_right = 97.0
offset_bottom = 86.0
text = "Number of copies:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 102.0
offset_right = 555.0
offset_bottom = 346.0

[node name="Calcuclate" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 97.0
offset_right = 127.0
offset_bottom = 136.0
text = "Calculate"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 192.0
offset_right = 128.0
offset_bottom = 231.0
text = "exit"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 145.0
offset_right = 129.0
offset_bottom = 184.0
text = "Clear"

[node name="Copies" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 167.0
offset_top = 49.0
offset_right = 350.0
offset_bottom = 88.0

[connection signal="pressed" from="Calcuclate" to="." method="_on_calcuclate_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
